--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   },
   "devDependencies": {
     "@savvywombat/tailwindcss-grid-areas": "^2.1.0"
+  },
+  "scripts": {
+    "start": "start"
   }
 }
